force-app/main/default/objects/ForecastItem__c/ForecastItem__c.object-meta.xml
<CustomObject>
    <label>Forecast Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>