force-app/main/default/objects/ForecastItem__c/fields/Temp_max__c.field-meta.xml
<CustomField>
    <fullName>Temp_max__c</fullName>
    <label>Temp max</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>