force-app/main/default/objects/ForecastItem__c/fields/Temp_min__c.field-meta.xml
<CustomField>
    <fullName>Temp_min__c</fullName>
    <label>Temp min</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>