force-app/main/default/objects/ForecastItem__c/fields/Weather_condition__c.field-meta.xml
<CustomField>
    <fullName>Weather_condition__c</fullName>
    <label>Weather condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>