force-app/main/default/objects/ForecastItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Temp_min__c</columns>
    <columns>Temp_max__c</columns>
    <columns>Weather_condition__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>